[package]
name = "pomoduro"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
crossterm = {version = "0.27.0", features = ["event-stream"]}
futures = "0.3.30"
ratatui = "0.26.3"
thiserror = "1.0.61"
tokio = { version = "1.39.2", features = ["full"] }
tokio-stream = "0.1.15"
